--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- The above 4 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
+
     <!-- Title -->
-    <title>Blog - Akamai Testing Environment</title>
+    <title>Blog - Baking Akamai</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
+
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P7KR3ST');</script>
+    <!-- End Google Tag Manager -->
+
 
     <!-- Core Stylesheet -->
     <link href="style.css" rel="stylesheet">
@@ -23,6 +33,11 @@
 </head>
 
 <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P7KR3ST"
+      height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
     <!-- Preloader Start -->
     <div id="preloader">
         <div class="yummy-load"></div>
@@ -87,7 +102,7 @@
                 <!-- Logo Area Start -->
                 <div class="col-12">
                     <div class="logo_area text-center">
-                        <a href="index.html" class="yummy-logo">Yummy Blog</a>
+                        <a href="index.html" class="yummy-logo">Baking Akamai</a>
                     </div>
                 </div>
             </div>
