Change title to FestCook

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
     <!-- Title -->
-    <title>Blog - Baking Akamai</title>
+    <title>FestCook</title>
 
     <!-- Favicon -->
     <link rel="icon" href="img/core-img/favicon.ico">
@@ -65,31 +65,6 @@
                         <a href="#"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
                     </div>
                 </div>
-                <!--  Login Register Area -->
-                <div class="col-7 col-sm-6">
-                    <div class="signup-search-area d-flex align-items-center justify-content-end">
-                        <div class="login_register_area d-flex">
-                            <div class="login">
-                                <a href="register.html">Sing in</a>
-                            </div>
-                            <div class="register">
-                                <a href="register.html">Sing up</a>
-                            </div>
-                        </div>
-                        <!-- Search Button Area -->
-                        <div class="search_button">
-                            <a class="searchBtn" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
-                        </div>
-                        <!-- Search Form -->
-                        <div class="search-hidden-form">
-                            <form action="#" method="get">
-                                <input type="search" name="search" id="search-anything" placeholder="Search Anything...">
-                                <input type="submit" value="" class="d-none">
-                                <span class="searchBtn"><i class="fa fa-times" aria-hidden="true"></i></span>
-                            </form>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -102,7 +77,7 @@
                 <!-- Logo Area Start -->
                 <div class="col-12">
                     <div class="logo_area text-center">
-                        <a href="index.html" class="yummy-logo">Baking Akamai</a>
+                        <a href="index.html" class="yummy-logo">FestCook</a>
                     </div>
                 </div>
             </div>
@@ -161,7 +136,7 @@
             <!-- Overlay Text -->
             <div class="project_title">
                 <div class="post-date-commnents d-flex">
-                    <a href="#">May 19, 2017</a>
+                    <a href="#">May 03, 2019</a>
                     <a href="#">5 Comment</a>
                 </div>
                 <a href="#">
