--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <img src="img/catagory-img/1.jpg" alt="">
                         <div class="catagory-title">
                             <a href="#">
-                                <h5>foodies</h5>
+                                <h5>Food</h5>
                             </a>
                         </div>
                     </div>
