Added new video in the carrusel

--- a/index.html
+++ b/index.html
@@ -180,7 +180,9 @@
         <!-- Single Slide -->
         <div class="welcome-single-slide">
             <!-- Post Thumb -->
-            <img src="img/bg-img/slide-4.jpg" alt="">
+            <video controls autoplay>
+              <source src="videos/landscape.mov">
+            </video>
             <!-- Overlay Text -->
             <div class="project_title">
                 <div class="post-date-commnents d-flex">
