removed video from the slider and add a new image

--- a/index.html
+++ b/index.html
@@ -180,9 +180,7 @@
         <!-- Single Slide -->
         <div class="welcome-single-slide">
             <!-- Post Thumb -->
-            <video controls muted>
-              <source src="videos/landscape.mov">
-            </video>
+            <img src="img/bg-img/slide-4.jpg" alt="">
             <!-- Overlay Text -->
             <div class="project_title">
                 <div class="post-date-commnents d-flex">
