Added new vertical video

--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
 </head>
 
 <body>
+
+    var dataLayer = []
+    dataLayer[0] = { pagetype : "Home" }
+
     <!-- Google Tag Manager (noscript) -->
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P7KR3ST"
       height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
