--- a/contact.html
+++ b/contact.html
@@ -220,8 +220,9 @@
             <div class="contact-form-area">
                 <div class="row">
                     <div class="col-12 col-md-5">
-                        <div class="contact-form-sidebar item wow fadeInUpBig" data-wow-delay="0.3s" style="background-image: url(img/bg-img/contact.jpg);">
-                        </div>
+                      <video controls autoplay muted>
+                        <source src="videos/video-desigual.webm" type="video/webm">
+                      </video>
                     </div>
                     <div class="col-12 col-md-7 item">
                         <div class="contact-form wow fadeInUpBig" data-wow-delay="0.6s">
