Added Cover Images to do some testing

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <!-- Single Slide -->
         <div class="welcome-single-slide">
             <!-- Post Thumb -->
-            <img src="img/bg-img/slide-1.jpg" alt="">
+            <img src="belive/venta_anticipada_invierno.jpg" alt="">
             <!-- Overlay Text -->
             <div class="project_title">
                 <div class="post-date-commnents d-flex">
